Parse forward and back mouse buttons

It appears we have support for it on all levels.

Fixes: QTBUG-85360
Change-Id: I68d03931197a3b883a1909e96096000fb84925bf
Reviewed-by: Peter Varga <pvarga@inf.u-szeged.hu>